@@ -1,5 +1,7 @@
 === master
 
+* Deprecate passing multiple arguments as filter arguments when not using a conditions specifier (jeremyevans)
+
 * Deprecate passing Procs as filter arguments, require they be passed as blocks (jeremyevans)
 
 * Deprecate Sequel::Error::* exception class aliases (jeremyevans)
